<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Handi\'Transport</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Paramètres</string>
    <string name="pannes">Pannes</string>
    <string name="autourDeMoi">Autour de moi</string>
    <string name="ajoutPanne">Ajout panne</string>
    <string name="ajoutLieu">Ajout lieu</string>
    <string name="rechercher">Rechercher lieu ou station</string>
    <string name="title_activity_selectionner_ligne">Selectionner Ligne</string>
    <string name="sectionnerLigne">Sélectionner une ligne</string>
    <string name="sectionnerLigneText01">Pannes signalées sur les stations: </string>
    <string name="title_activity_autour_de_moi">Map</string>
    <string name="title_activity_ajout_panne">AjoutPanne</string>
    <string name="ajouterUnePanne">Ajouter une panne</string>
    <string name="title_activity_ajout_lieu">AjoutLieu</string>
    <string name="ajouterUnLieu">Ajouter un lieu</string>
    <string name="google_maps_key">AIzaSyAH7Qh_aj1BXv_nhucdqW-Tp-NbxjNfDCg</string>
    <string name="title_activity_lieu">Lieu</string>
    //Ajout Lieu//
    <string name="ajouterLieuLieu">Lieu</string>
    <string name="ajouterLieuAdresse">Adresse</string>
    <string name="ajouterLieuCodePostale">Code Postale</string>
    <string name="ajouterLieuVille">Ville</string>
    <string name="ajouterLieuCommentaire">Commentaire</string>
    <string name="ajouterLieuValider">Valider</string>
    //Ajout Panne
    <string name="ajouterPanneAscenseur">Ascenseur</string>
    <string name="ajouterPanneEscalator">Escalator</string>
    <string name="ajouterPanneDetails">Détails</string>
    <string name="ajouterPanneSignalerPanne">Signaler Panne</string>
    <string name="ajouterPanneRechercherStation">Rechercher une station</string>
    //Lieu
    <string name="lieuNomLieu">Nom Lieu</string>
 //pas forcément utile proviendra de la base de données
    <string name="lieuAdresse">Adresse</string>
    <string name="lieuCPetVille">CPetVille</string>
    <string name="lieuAccessibilité">Accessiblité</string>
    <string name="lieuAvis">Avis</string>
    <string name="lieuLaisserAvis">Laisser un avis</string>
    <string name="title_activity_panne_details">panne_details</string>

    //detail panne
    <string name="detailPanne1">Panne sur</string>
    <string name="detailPanne2">Date incident:</string>
    <string name="detailPanne3">Dernière mise à jour:</string>
    <string name="detailPanne4">Problème réglé!</string>
    <string name="detailPanne5">Problème non réglé...</string>

</resources>
